[gd_scene load_steps=18 format=2]

[ext_resource path="res://Player/Assets/pin.png" type="Texture" id=1]
[ext_resource path="res://Player/Scripts/Pin.gd" type="Script" id=2]
[ext_resource path="res://Player/Scripts/FenceArea.gd" type="Script" id=3]
[ext_resource path="res://Player/Assets/Sound/pin_spawn1.wav" type="AudioStream" id=4]
[ext_resource path="res://Player/Assets/Sound/pin_spawn2.wav" type="AudioStream" id=5]
[ext_resource path="res://Player/Assets/Sound/pin_spawn3.wav" type="AudioStream" id=6]
[ext_resource path="res://Player/Scripts/Multiple_Sound_Player.gd" type="Script" id=7]
[ext_resource path="res://Player/Assets/pink_line.png" type="Texture" id=8]

[sub_resource type="SegmentShape2D" id=5]
b = Vector2( 0, 0 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2, 2 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "bounce"
length = 0.15
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.07, 0.12, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 1.4 ), Vector2( 1.2, 0.8 ), Vector2( 0.8, 1.1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "death"
length = 0.15
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07, 0.13, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2, 2 ), Vector2( 2, 2 ), Vector2( 1e-05, 1e-05 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 2.72727, 2.72727 )

[sub_resource type="Curve" id=7]
max_value = 1.5
_data = [ Vector2( 0.00238095, 1.05829 ), 0.0, 3.55889, 0, 0, Vector2( 1, 0.0432692 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
emission_shape = 5
emission_ring_radius = 4.0
emission_ring_inner_radius = 3.0
emission_ring_height = 1.0
emission_ring_axis = Vector3( 0, 0, 1 )
flag_align_y = true
flag_disable_z = true
direction = Vector3( 0, 0, 1 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 15.0
initial_velocity_random = 0.3
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 50.0
scale = 0.5
scale_random = 0.48
scale_curve = SubResource( 8 )

[node name="Pin" type="StaticBody2D"]
collision_layer = 32
collision_mask = 0
script = ExtResource( 2 )

[node name="VisualFence" type="Line2D" parent="."]
width = 1.0
default_color = Color( 0.529412, 0.156863, 0.415686, 1 )

[node name="FenceArea" type="Area2D" parent="VisualFence"]
collision_layer = 4
collision_mask = 4
input_pickable = false
script = ExtResource( 3 )

[node name="FenceCollision" type="CollisionShape2D" parent="VisualFence/FenceArea"]
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "bounce"
anims/RESET = SubResource( 2 )
anims/bounce = SubResource( 3 )
anims/death = SubResource( 6 )

[node name="PlayerCollision" type="Area2D" parent="."]
scale = Vector2( 1.1, 1.1 )
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCollision"]
shape = SubResource( 4 )

[node name="SpawnSound" type="AudioStreamPlayer2D" parent="."]
volume_db = 5.0
bus = "SoundEffects"
script = ExtResource( 7 )
available_sounds = [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ]

[node name="Sparks" type="Particles2D" parent="."]
emitting = false
amount = 10
lifetime = 0.4
one_shot = true
explosiveness = 0.7
process_material = SubResource( 9 )
texture = ExtResource( 8 )

[node name="AuxiliaryFence" type="Line2D" parent="."]
width = 1.0
default_color = Color( 0.529412, 0.156863, 0.415686, 0.392157 )

[connection signal="area_entered" from="VisualFence/FenceArea" to="." method="_on_FenceCollision_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="PlayerCollision" to="." method="_on_PlayerCollision_body_entered"]
